--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php": ">=5.6"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=5.7"
+    "phpunit/phpunit": "^8.0"
   },
   "autoload": {
     "psr-4": {
