--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0"
+    "phpunit/phpunit": "^8.0",
+    "fzaninotto/faker": "^1.8",
+    "phpstan/phpstan": "^0.11.5"
   },
   "autoload": {
     "psr-4": {
@@ -26,6 +28,5 @@
     "psr-4": {
       "Zoho\\CRM\\Tests\\": "tests"
     }
-  },
-  "minimum-stability": "dev"
+  }
 }
